# aicspylibczi-pyodide

./: meta.yaml
cmake/: Config.cmake  build_args.sh
src/: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Makefile  ROADMAP.md  codecov.yml  pytest.ini  setup.cfg  tox.ini
src/.github/ISSUE_TEMPLATE/: bug_report.md
src/.github/workflows/: build-docs.yml  cpp-build-main.yml  cpp-build-pr.yml  py-build-main.yml  py-build-pr.yml
src/_aicspylibczi/: StreamImplLockingRead.h  inc_libCZI.h
src/_aicspylibczi/docs/: CdocsCMakeLists.txt  Doxyfile
src/aicspylibczi/tests/: conftest.py  test_czi_file.py
src/aicspylibczi/tests/resources/: RGB-8bit_Gplane.npy
src/c_tests/: CMakeLists.txt  test_Reader.cpp
src/docs/: CMakeLists.txt  aicspylibczi.rst  conf.py.in  index.rst  installation.rst  make.bat  modules.rst
src/docs/cmake/: FindSphinx.cmake
src/libCZI/: CMakeLists.txt
src/libCZI/Src/CZICmd/: CMakeLists.txt
src/scripts/: benchmark.py  chart_benchmarks.py  setupWheelEnv.sh
